--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+      env:
+        SUPER_SECRET: ${{ secrets.BOT_TOKEN }}
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
